header file in CMakeLists, cleanup script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ include_directories(.)
 add_executable(ios_proj2
         error_msg.c
         error_msg.h
-        proj2.c)
+        proj2.c proj2.h)
 
 add_executable(fake
         tomas_susovsky.c)
